@@ -7,9 +7,10 @@ Released ????? ??, ????
 - Honduras support (Oscar Romero)
 - Brazil's holidays fixes (victorpluna)
 - Added provinces and holidays in Italy (krolmic, dr-p)
-- Fix regression with German Easter and Pentecost holidays (vlt, Achimh3011)
+- Fixed regression with German Easter and Pentecost holidays (vlt, Achimh3011)
 - Fixed Canada Holiday Calendar (justinasfour04)
 - Fixed Columbus Day in Arkansas - US (johanneshk)
+- Added Grand Final Day in Victoria - AU (isha1111)
 
 Version 0.9.8
 =============
